--- a/.github/workflows/palindrome-test.yml
+++ b/.github/workflows/palindrome-test.yml
@@ -5,18 +5,31 @@ on:
     branches: [ master ]
 
 jobs:
-
-  build:
-    name: Test Build
-    runs-on: ubuntu-latest 
+  test:
+    runs-on: ubuntu-latest
     steps:
-      - name: Setup Node
+      - uses: actions/checkout@v2
+      - name: Test using Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: 12        
-      
-      - name: Run a one-line script
-        uses: actions/checkout@v2
-        
+          node-version: '12'
       - run: yarn install
-      - run: yarn test
+      - run: yarn test:ci
+      - name: Tests ✅
+        if: ${{ success() }}
+        run: |
+          curl --request POST           --url https://api.github.com/repos/${{ github.repository }}/statuses/${{ github.sha }}           --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}'           --header 'content-type: application/json'           --data '{
+            "context": "tests",
+            "state": "success",
+            "description": "Tests passed",
+            "target_url": "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+          }'
+      - name: Tests 🚨
+        if: ${{ failure() }}
+        run: |
+          curl --request POST           --url https://api.github.com/repos/${{ github.repository }}/statuses/${{ github.sha }}           --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}'           --header 'content-type: application/json'           --data '{
+            "context": "tests",
+            "state": "failure",
+            "description": "Tests failed",
+            "target_url": "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+          }'
