--- a/.github/workflows/palindrome-test.yml
+++ b/.github/workflows/palindrome-test.yml
@@ -10,12 +10,14 @@ jobs:
     name: Test Build
     runs-on: ubuntu-latest 
     steps:
-
       - uses: actions/checkout@v2
-      - name: Test using Node.js
-        uses: actions/setup-node@v1
+      
+      - name: Setup node 12
+        uses: actions/setup-node@v2
         with:
-          node-version: '12' 
-      - run: npm install
+          node-version: 12.x 
+      
+      - run: npm ci
+      
       - run: npm test
       
