--- a/.github/workflows/palindrome-test.yml
+++ b/.github/workflows/palindrome-test.yml
@@ -18,6 +18,7 @@ jobs:
           node-version: 12.x 
       
       - run: npm ci
-      
+      - run: npm run build
+      - run: npm run format-check
       - run: npm test
       
