--- a/.github/workflows/palindrome-test.yml
+++ b/.github/workflows/palindrome-test.yml
@@ -1,24 +1,24 @@
-name : Test Palindrome
+name: Node.js CI
 
-on: 
-  push:
-    branches: [ master ]
+on: [push]
 
 jobs:
-
   build:
-    name: Test Build
-    runs-on: ubuntu-latest 
+
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [8.x, 10.x, 12.x]
+
     steps:
-      - uses: actions/checkout@v2
-      
-      - name: Setup node 12
-        uses: actions/setup-node@v2
-        with:
-          node-version: 12.x 
-      
-      - run: npm ci
-      - run: npm run build
-      - run: npm run format-check
-      - run: npm test
-      
+    - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+    - run: npm install
+    - run: npm run build --if-present
+    - run: npm test
+      env:
+        CI: true
