--- a/.github/workflows/palindrome-test.yml
+++ b/.github/workflows/palindrome-test.yml
@@ -19,6 +19,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm install -g nativescript
     - run: npm run build --if-present
-    - run: npm test -g nativescript
+    - run: chmod +rwx ./node_modules/.bin/jest
+    - run: npm test
       env:
         CI: true
