--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "ejs": "^2.6.1",
     "express": "^4.17.1",
     "mongoose": "^5.11.9",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "prom-client": "^13.0.0"
   },
   "devDependencies": {
     "jest": "^26.6.3"
